--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "2.0.0",
   "author": "David Levai <david@davidlevai.com>",
   "dependencies": {
-    "gatsby": "2.23.20",
-    "gatsby-plugin-manifest": "2.4.17",
-    "gatsby-plugin-postcss": "2.3.9",
-    "gatsby-plugin-react-helmet": "3.3.9",
-    "gatsby-plugin-sharp": "2.6.17",
+    "gatsby": "2.24.2",
+    "gatsby-plugin-manifest": "2.4.18",
+    "gatsby-plugin-postcss": "2.3.11",
+    "gatsby-plugin-react-helmet": "3.3.10",
+    "gatsby-plugin-sharp": "^2.6.19",
+    "gatsby-source-filesystem": "^2.3.19",
+    "gatsby-transformer-sharp": "^2.5.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.1.0"
@@ -38,6 +40,7 @@
     "eslint-plugin-react": "7.20.3",
     "gatsby-plugin-eslint": "2.0.8",
     "prettier": "2.0.5",
-    "tailwindcss": "1.4.6"
+    "tailwindcss": "1.4.6",
+    "tailwindcss-skip-link": "^1.0.1"
   }
 }
