--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "dependencies": {
     "gatsby": "2.24.2",
     "gatsby-plugin-manifest": "2.4.18",
+    "gatsby-plugin-netlify": "^2.3.11",
+    "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-postcss": "2.3.11",
     "gatsby-plugin-react-helmet": "3.3.10",
     "gatsby-plugin-sharp": "^2.6.19",
     "gatsby-source-filesystem": "^2.3.19",
+    "gatsby-transformer-remark": "^2.8.25",
     "gatsby-transformer-sharp": "^2.5.11",
+    "netlify-cms-app": "^2.12.16",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.1.0"
