--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "David Levai <david@davidlevai.com>",
   "dependencies": {
     "gatsby": "2.24.2",
+    "gatsby-image": "^2.4.13",
     "gatsby-plugin-manifest": "2.4.18",
     "gatsby-plugin-netlify": "^2.3.11",
     "gatsby-plugin-netlify-cms": "^4.3.11",
