--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "2.0.0",
   "author": "David Levai <david@davidlevai.com>",
   "dependencies": {
+    "@tailwindcss/typography": "^0.1.2",
+    "@tailwindcss/ui": "^0.3.1",
     "gatsby": "2.24.2",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-manifest": "2.4.18",
