--- a/static/kathi/config.yml
+++ b/static/kathi/config.yml
@@ -12,7 +12,7 @@ collections:
     label: Munka
     folder: content/portfolio
     create: true
-    slug: index
+    slug: '{{title}}'
     path: '{{title}}/index'
     editor:
       preview: false
