fix slug issues

--- a/static/kathi/config.yml
+++ b/static/kathi/config.yml
@@ -12,18 +12,17 @@ collections:
     label: Munka
     folder: content/portfolio
     create: true
-    slug: '{{title}}'
+    slug: '{{slug}}'
     path: '{{title}}/index'
     editor:
       preview: false
     fields:
-      - { name: path, label: Webcím }
       - { name: date, label: Dátum, widget: datetime }
       - { name: "thumbnail", label: "Promo kép", widget: "image", allow_multiple: false}
       - { name: title, label: Cím }
+      - { name: slug, label: Slug }
       - { name: client, label: Ügyfél }
       - { name: solutions, label: Megoldások }
       - { name: jobtime, label: Ekkor készült }
       - { name: categories, label: Kategória, widget: list, default: ['all', 'branding', 'web', 'print', 'copy', 'social', 'ig'] }
-      - { name: "images", label: "Képek", widget: "image"}
-      - { name: body, label: Tartalom, widget: markdown }
+      - { name: "images", label: "Képek", widget: "image", allow_multiple: true}
