--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@tailwindcss/ui": "^0.3.1",
     "gatsby": "2.24.2",
     "gatsby-image": "^2.4.13",
+    "gatsby-plugin-google-analytics": "^2.3.11",
     "gatsby-plugin-manifest": "2.4.18",
     "gatsby-plugin-netlify": "^2.3.11",
     "gatsby-plugin-netlify-cms": "^4.3.11",
