--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "version": "2.0.0",
   "author": "David Levai <david@davidlevai.com>",
   "dependencies": {
-    "@tailwindcss/ui": "^0.3.1",
-    "gatsby": "2.24.2",
+    "@tailwindcss/ui": "^0.4.0",
+    "gatsby": "2.24.7",
     "gatsby-image": "^2.4.13",
-    "gatsby-plugin-google-analytics": "^2.3.11",
-    "gatsby-plugin-manifest": "2.4.18",
+    "gatsby-plugin-google-analytics": "^2.3.12",
+    "gatsby-plugin-manifest": "2.4.19",
     "gatsby-plugin-netlify": "^2.3.11",
     "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-postcss": "2.3.11",
     "gatsby-plugin-react-helmet": "3.3.10",
-    "gatsby-plugin-sharp": "^2.6.19",
-    "gatsby-source-filesystem": "^2.3.19",
+    "gatsby-plugin-sharp": "^2.6.20",
+    "gatsby-source-filesystem": "^2.3.20",
     "gatsby-transformer-remark": "^2.8.25",
     "gatsby-transformer-sharp": "^2.5.11",
-    "netlify-cms-app": "^2.12.16",
+    "netlify-cms-app": "^2.12.18",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.1.0"
@@ -37,17 +37,15 @@
     "clean": "gatsby clean"
   },
   "devDependencies": {
-    "@tailwindcss/custom-forms": "0.2.1",
-    "autoprefixer": "9.8.4",
+    "autoprefixer": "9.8.5",
     "babel-eslint": "10.1.0",
     "cssnano": "4.1.10",
-    "eslint": "7.4.0",
+    "eslint": "7.5.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-react": "7.20.3",
     "gatsby-plugin-eslint": "2.0.8",
     "prettier": "2.0.5",
-    "tailwindcss": "1.4.6",
-    "tailwindcss-skip-link": "^1.0.1"
+    "tailwindcss": "1.5.1"
   }
 }
