--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-transformer-remark": "^2.8.25",
     "gatsby-transformer-sharp": "^2.5.11",
     "netlify-cms-app": "^2.12.18",
+    "netlify-cms-media-library-cloudinary": "^1.3.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.1.0"
