--- a/static/kathi/config.yml
+++ b/static/kathi/config.yml
@@ -41,7 +41,7 @@ collections:
           - { name: 'client', label: 'Ügyfél' }
           - { name: 'solutions', label: 'Megoldások' }
           - { name: 'jobtime', label: 'Ekkor készült' }
-          - { name: 'gradient', label: 'Gradient', required: false }
+          - { name: 'gradient', label: 'Gradient' }
           - {
             name: 'categories',
             label: 'Kategória',
