--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -2,10 +2,10 @@
 new_page_extension: md
 auto_deploy: false
 admin_path: "/static/kathi"
-webhook_url: 
-sections: 
-upload_dir: uploads
-public_path: "/uploads"
+webhook_url:
+sections:
+upload_dir: static/uploads
+public_path: "/static/uploads"
 front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
