--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dev": "yarn develop",
     "start": "yarn develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "forestry:preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "devDependencies": {
     "autoprefixer": "9.8.5",
