--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -2,7 +2,7 @@
 new_page_extension: md
 auto_deploy: false
 admin_path: "/static/kathi"
-webhook_url: 
+webhook_url:
 sections:
 - type: directory
   path: content/portfolio
@@ -20,4 +20,4 @@ build:
   preview_docker_image: forestryio/node:12
   mount_path: "/srv"
   working_dir: "/srv"
-  instant_preview_command: npm run develop
+  instant_preview_command: npm run forestry:preview
