--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "2.0.0",
   "author": "David Levai <david@davidlevai.com>",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.3",
     "@tailwindcss/ui": "^0.4.0",
+    "dotenv": "^8.2.0",
     "gatsby": "2.24.11",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-google-analytics": "^2.3.13",
