--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "version": "2.0.0",
   "author": "David Levai <david@davidlevai.com>",
   "dependencies": {
-    "@sendgrid/mail": "^7.2.3",
-    "@tailwindcss/ui": "^0.4.0",
-    "dotenv": "^8.2.0",
-    "gatsby": "2.24.11",
-    "gatsby-image": "^2.4.13",
-    "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-manifest": "2.4.21",
-    "gatsby-plugin-netlify": "^2.3.11",
+    "@sendgrid/client": "7.3.0",
+    "@tailwindcss/ui": "0.6.2",
+    "dotenv": "8.2.0",
+    "gatsby": "2.24.85",
+    "gatsby-image": "2.4.21",
+    "gatsby-plugin-google-analytics": "2.3.19",
+    "gatsby-plugin-manifest": "2.4.35",
+    "gatsby-plugin-netlify": "2.3.24",
     "gatsby-plugin-postcss": "2.3.11",
-    "gatsby-plugin-react-helmet": "3.3.10",
-    "gatsby-plugin-sharp": "^2.6.22",
-    "gatsby-source-filesystem": "^2.3.23",
-    "gatsby-transformer-remark": "^2.8.27",
-    "gatsby-transformer-sharp": "^2.5.11",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "gatsby-plugin-react-helmet": "3.3.14",
+    "gatsby-plugin-sharp": "2.6.43",
+    "gatsby-source-filesystem": "2.3.35",
+    "gatsby-transformer-remark": "2.8.46",
+    "gatsby-transformer-sharp": "2.5.19",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "react-helmet": "6.1.0"
   },
   "scripts": {
@@ -41,12 +41,12 @@
     "autoprefixer": "9.8.5",
     "babel-eslint": "10.1.0",
     "cssnano": "4.1.10",
-    "eslint": "7.5.0",
+    "eslint": "7.12.0",
     "eslint-loader": "4.0.2",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-react": "7.21.5",
     "gatsby-plugin-eslint": "2.0.8",
-    "prettier": "2.0.5",
-    "tailwindcss": "1.5.2"
+    "prettier": "2.1.2",
+    "tailwindcss": "1.9.6"
   }
 }
