--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "version": "2.0.0",
   "author": "David Levai <david@davidlevai.com>",
   "dependencies": {
-    "@sendgrid/client": "7.3.0",
     "@tailwindcss/ui": "0.6.2",
     "dotenv": "8.2.0",
-    "gatsby": "2.24.85",
-    "gatsby-image": "2.4.21",
-    "gatsby-plugin-google-analytics": "2.3.19",
-    "gatsby-plugin-manifest": "2.4.35",
-    "gatsby-plugin-netlify": "2.3.24",
+    "gatsby": "2.27.4",
+    "gatsby-image": "2.6.0",
+    "gatsby-plugin-google-analytics": "2.6.0",
+    "gatsby-plugin-manifest": "2.7.0",
+    "gatsby-plugin-netlify": "2.6.0",
     "gatsby-plugin-postcss": "2.3.11",
-    "gatsby-plugin-react-helmet": "3.3.14",
-    "gatsby-plugin-sharp": "2.6.43",
-    "gatsby-source-filesystem": "2.3.35",
-    "gatsby-transformer-remark": "2.8.46",
-    "gatsby-transformer-sharp": "2.5.19",
+    "gatsby-plugin-react-helmet": "3.5.0",
+    "gatsby-plugin-sharp": "2.9.1",
+    "gatsby-source-filesystem": "2.6.1",
+    "gatsby-transformer-remark": "2.11.1",
+    "gatsby-transformer-sharp": "2.7.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "react-helmet": "6.1.0"
+    "react-helmet": "6.1.0",
+    "react-hook-form": "^6.12.1"
   },
   "scripts": {
     "analyze:lint": "eslint --ext .jsx --ext .js .",
@@ -41,12 +41,12 @@
     "autoprefixer": "9.8.5",
     "babel-eslint": "10.1.0",
     "cssnano": "4.1.10",
-    "eslint": "7.12.0",
+    "eslint": "7.14.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-react": "7.21.5",
     "gatsby-plugin-eslint": "2.0.8",
-    "prettier": "2.1.2",
+    "prettier": "2.2.1",
     "tailwindcss": "1.9.6"
   }
 }
