--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "version": "2.0.0",
   "author": "David Levai <david@davidlevai.com>",
   "dependencies": {
-    "@tailwindcss/ui": "0.6.2",
+    "@tailwindcss/ui": "0.7.2",
     "dotenv": "8.2.0",
-    "gatsby": "2.27.4",
-    "gatsby-image": "2.6.0",
-    "gatsby-plugin-google-analytics": "2.6.0",
-    "gatsby-plugin-manifest": "2.7.0",
-    "gatsby-plugin-netlify": "2.6.0",
-    "gatsby-plugin-postcss": "2.3.11",
-    "gatsby-plugin-react-helmet": "3.5.0",
-    "gatsby-plugin-sharp": "2.9.1",
-    "gatsby-source-filesystem": "2.6.1",
-    "gatsby-transformer-remark": "2.11.1",
-    "gatsby-transformer-sharp": "2.7.0",
+    "gatsby": "2.28.0",
+    "gatsby-image": "2.7.0",
+    "gatsby-plugin-google-analytics": "2.7.0",
+    "gatsby-plugin-manifest": "2.8.0",
+    "gatsby-plugin-netlify": "2.7.0",
+    "gatsby-plugin-postcss": "3.3.0",
+    "gatsby-plugin-react-helmet": "3.6.0",
+    "gatsby-plugin-sharp": "2.10.0",
+    "gatsby-source-filesystem": "2.7.0",
+    "gatsby-transformer-remark": "2.12.0",
+    "gatsby-transformer-sharp": "2.8.0",
+    "postcss": "8.1.13",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-helmet": "6.1.0",
-    "react-hook-form": "^6.12.1"
+    "react-hook-form": "6.12.2"
   },
   "scripts": {
     "analyze:lint": "eslint --ext .jsx --ext .js .",
@@ -38,7 +39,6 @@
     "forestry:preview": "gatsby develop -p 8080 -H 0.0.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "9.8.5",
     "babel-eslint": "10.1.0",
     "cssnano": "4.1.10",
     "eslint": "7.14.0",
@@ -47,6 +47,6 @@
     "eslint-plugin-react": "7.21.5",
     "gatsby-plugin-eslint": "2.0.8",
     "prettier": "2.2.1",
-    "tailwindcss": "1.9.6"
+    "tailwindcss": "2.0.1"
   }
 }
